syntax = "proto3";
package filebox;

option go_package = "./pkg/auth/proto";

service FileboxService {
    rpc SendFile(SendFileRequest) returns (SendFileResponse) {}
    rpc UpdateFile(UpdateFileRequest) returns (UpdateFileResponse) {}
    rpc GetFile(GetFileRequest) returns (GetFileResponse) {}
    rpc GetListOfAllFiles(GetListOfAllFilesRequest) returns (GetListOfAllFilesResponse) {}
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {}
    rpc SendFileToPerson(SendFileToPersonRequest) returns (SendFileToPersonResponse) {}
  }

message SendFileRequest {
    string username = 1;
    bytes file = 2;
  }
  
  message SendFileResponse {
    string error = 1;
  }
  
  message UpdateFileRequest {
    string username = 1;
    bytes file = 2;
  }
  
  message UpdateFileResponse {
    string error = 1;
  }

  message GetFileRequest {
    string username = 1;
    string fileName = 2;
  }

  message GetFileResponse {
    string fileURL = 1;
    string error = 2;
  }

  message GetListOfAllFilesRequest {
    string username = 1;
  }

  message GetListOfAllFilesResponse {
    bytes allFiles = 1;
    string error = 2;
  }
  
  message DeleteFileRequest {
    string username = 1;
    string fileName = 2;
  }

  message DeleteFileResponse {
    string error = 1;
  }

  message SendFileToPersonRequest {
    string username = 1;
    string senderUsername = 2;
    bytes file = 3;
  }

  message SendFileToPersonResponse {
    string error = 1;
  }